- Added partial proxy-based Objective-C delegates support (forwards unknown methods to a Java instance) (issue #188)
- Added basic calls log mechanism (disables direct mode) : -Dbridj.logCalls=true or BRIDJ_LOG_CALLS=1 (only logs the method name & signature, not the arguments or returned values)
- Added BridJ.setMinLogLevel(Level) (issue #190)
- Made the StructIO customization mechanism more flexible
- Made JawtLibrary public
- Various Javadoc tweaks

BridJ 0.5 (r2128, 20110621)

- Added support for Android(arm) platform
- Added Pointer.clone() that duplicates the memory (requires a pointer with bounds information)
- Added various pre-packaged specialized subsets of BridJ : c-only, windows-only, macosx-only, unix-only, linux-only, ios-only, android
- Added Pointer.allocateDynamicCallback(DynamicCallback<R>, callingConv, returnType, paramTypes...)
- Added BridJ native library path override : one can set the BRIDJ_LIBRARY environment variable or the "bridj.library" property to the full path of libbridj.so/.dylib/.dll

BridJ 0.4.2 (r2009, 20110527)

- Fixed behaviour in environments with a null default classloader (as in Scala 2.9.0) 
- Added support for Java 1.5 (issue #57)
- Added support for MacOS X 10.4, 10.5 (was previously restricted to 10.6)

BridJ 0.4.1 (r1990, 20110513)

- Fixed callbacks on Windows x86
- Fixed multithreaded callbacks ! (callbacks called in a different thread than the one that created them used to hang indefinitely)
- Fixed Pointer and ValuedEnum arguments and return values in callbacks
- Fixed loading of libraries that depend on other libraries in the same directory on Windows (issue #65)
- Fixed BridJ.sizeOf(Pointer.class), sizeOf(SizeT.class), sizeOf(CLong.class)...
- Enhanced C++ templates support
- Added support for Windows APIs Unicode vs. ANSI functions renaming (e.g. SendMessage being one of SendMessageW or SendMessageA, depending on Platform.useUnicodeVersionOfWindowsAPIs)