@@ -6,7 +6,6 @@
 package org.bridj;
 import org.bridj.FunctionTest.ETest;
 import static org.bridj.util.DefaultParameterizedType.*;
-import org.bridj.util.Utils;
 import org.bridj.demangling.Demangler;
 import org.bridj.demangling.Demangler.TypeRef;
 import org.bridj.demangling.Demangler.Ident;
