@@ -1,15 +1,10 @@
 package org.bridj;
 
 
-import org.bridj.demangling.Demangler;
-import java.io.FileNotFoundException;
-import java.util.Collection;
-import java.util.Set;
 
 import org.junit.Test;
 import java.awt.*;
 import org.bridj.jawt.*;
-import java.io.*;
 
 import static org.junit.Assert.*;
 
