@@ -1,7 +1,5 @@
 package org.bridj;
 import org.bridj.ann.*;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 import org.junit.Test;
 
 import static org.bridj.Pointer.*;
