@@ -1,21 +1,11 @@
 package org.bridj;
 
 import org.junit.Test;
-import org.junit.Before;
-import org.junit.After;
 import static org.junit.Assert.*;
 
 import org.bridj.objc.*;
-import org.bridj.ann.Field;
 import org.bridj.ann.Library;
 import org.bridj.ann.Runtime;
-import org.bridj.ann.Array;
-import org.bridj.ann.Ptr;
-import org.bridj.cpp.com.*;
-import static org.bridj.Pointer.*;
-import static org.bridj.BridJ.*;
-import static org.bridj.objc.FoundationLibrary.*;
-import java.util.*;
 import java.io.*;
 
 @Library("Foundation")
