@@ -1,11 +1,8 @@
 package org.bridj;
 
-import java.io.FileNotFoundException;
 import org.bridj.ann.*; // annotations such as Library...
 
 import static org.bridj.Pointer.*;
-import java.util.Collections;
-import java.util.Iterator;
 import org.junit.*;
 import static org.junit.Assert.*;
 
